--- a/index.html
+++ b/index.html
@@ -2,15 +2,10 @@
 layout: default
 ---
 
-<div id="home">
-  <div id='logo'>
-    <a href='/'><img src='/img/logo.png' height='70px' /></a>
-  </div>
+  {% for post in site.posts %}
   <div>
-    <ul class="posts">
-      {% for post in site.posts %}
-      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a></li>
-      {% endfor %}
-    </ul>
+    <img class='icon' src='{{ site.baseurl }}/img/logo.jpg' height='64px' width='64px' />
+    <span>{{ post.date | date_to_string }}</span> - <a href="{{ post.url | prepend: site.baseurl | prepend: site.url }}">{{ post.title }}</a>
   </div>
-</div>
+  {% endfor %}
+
